--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <th scope = "col" >Валидация</th>
                         <th scope = "col" >М/Ж</th>
                         <th scope = "col" >Дата рождения</th>
+                        <th scope = "col" >Полных лет</th>
                     </tr>
                 </thead>
                 <tbody id="resultValidation">
